kubernetes/exams/9.nginx-ingress/2.app-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-nginx-ingress
  namespace: nginx-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: dongnguyen.test
      http:
        paths:
          - path: /
            backend:
              serviceName: http-test-svc
              servicePort: 80
